--- a/app/src/main/res/layout-normal/activity_main.xml
+++ b/app/src/main/res/layout-normal/activity_main.xml
@@ -17,8 +17,8 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="79dp"
-        app:layout_constraintHorizontal_bias="0.026"
+        android:layout_marginBottom="104dp"
+        app:layout_constraintHorizontal_bias="0.996"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
@@ -26,13 +26,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="36dp"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/editText"
@@ -247,25 +246,26 @@
         android:text="Period:"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="228dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginBottom="171dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="2dp" />
 
     <TextView
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginBottom="228dp"
-        android:layout_marginLeft="171dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="165dp"
+        android:layout_marginLeft="139dp"
+        android:layout_marginStart="150dp"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="171dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="68dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:clickable="true"
         android:onClick="onValuesButtonClick"
@@ -273,8 +273,31 @@
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteY="501dp"
-        tools:layout_editor_absoluteX="327dp" />
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="230dp"
+        android:layout_marginRight="8dp"
+        android:text="Escape velocity"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="36dp"
+        android:layout_marginLeft="64dp"
+        android:text="v="
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
